feat(breadcrumb): added navigation feature with breadcrumb
- Implemented breadcrumb rendering based on navigation stack.
- Added functionality to navigate using breadcrumb items.
- Updated styles for breadcrumb items.# Please enter the commit message for your changes. Lines starting

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <h1>Simple targets tracking app</h1>
-    <button id="backButton" name="back-btn">Back</button>
+    <div class="breadcrumb-container">
+
+    </div>
     <div id="context-menu" class="context-menu">
         <ul>
             <li id="menu-add-left" name="menu-add-left">Add to Left</li>
@@ -24,6 +26,8 @@
         </div>
 
     </div>
+    <button id="backButton" name="back-btn">Back</button>
+
 </body>
 
 </html>
